# 3d-conics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  glad.c  main.cpp  surfaceDB.sqlite
Include/: Camera.h  GUI.h  Globals.h  Harness.h  KeyListener.h  Logger.h  Menu.h  Mesh.h  Renderer.h  Shader.h  Spawner.h  Surface.h
Include/glad/: glad.h
Include/glm/ext/: matrix_clip_space.hpp  matrix_int2x2_sized.hpp  matrix_int3x2_sized.hpp  matrix_int3x3_sized.hpp  matrix_int4x2_sized.hpp  matrix_int4x3_sized.hpp  matrix_projection.hpp  matrix_transform.hpp  matrix_uint2x3_sized.hpp  matrix_uint3x2_sized.hpp  matrix_uint4x2_sized.hpp  matrix_uint4x3_sized.hpp  matrix_uint4x4_sized.hpp  scalar_integer.hpp  scalar_relational.hpp  vector_reciprocal.hpp  vector_relational.hpp
Include/glm/gtc/: color_space.hpp  constants.hpp  epsilon.hpp  matrix_transform.hpp  type_precision.hpp  ulp.hpp
Include/glm/gtx/: bit.hpp  color_encoding.hpp  common.hpp  component_wise.hpp  matrix_decompose.hpp  range.hpp  raw_data.hpp  string_cast.hpp
Shaders/: frag.glsl  ofrag.glsl  overt.glsl  vert.glsl
Source/: Camera.cpp  Camera.h  Harness.cpp  Harness.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  main.cpp
Source/GUI/: GUI.cpp  GUI.h  Menu.cpp  Menu.h  Spawner.cpp
Source/Utils/: Globals.h  KeyListener.cpp  KeyListener.h  Logger.cpp  Logger.h  Math.h
imgui/: imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_tables.cpp
